--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,15 +7,13 @@
 /*Fuente general y fondo provisiorio*/
 html {
     font-family:'Poppins', sans-serif;
+}
+
+main{
     background-image: linear-gradient(to left, #ffffff, #fafafd, #f2f6fb, #eaf2f8, #e1eff4, #d4e3e6, #c7d7d9, #bacbcb, #a6b4b4, #929d9d, #7f8787, #6c7272);
 }
 
 /*etiquietas*/
-img {
-    width: 300px;
-    height: 200px;
-}
-
 header{
     display: flex;
     justify-content: space-between;
@@ -28,18 +26,20 @@ header{
 
 
 footer{
-    margin: 0 10px 5px 20px;
+    background-color: #7f8787;
+    text-align: center;
 }
 
 h1{
     font-weight: 700;
     text-decoration: underline;
-    margin: 5px 0px 10px 0px;
+    padding: 5px 0px 10px 0px;
     text-align: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 h2, h3, h5, h4{
-    font-weight: 300;
+    font-weight: 200;
     margin: 5px 0px 10px 0px;
     text-align: center;
 }
@@ -53,11 +53,6 @@ ul li {
     justify-content: flex-end;
 }
 
-a{
-    text-decoration: none;
-    color: turquoise;
-    cursor: pointer;
-}
 
 h2{
     font-weight: 300;
@@ -95,21 +90,27 @@ form input::placeholder{
 .card{
     justify-content: space-between;
     width: 300px;
-    border: solid #6c7272;
+    border: solid black;
     border-radius: 3% 3% 3% 3%;
-    text-align: justify;
-    margin: 5px 3px 5px 30px;
+    margin: 5px 3px 3% 30px;
     box-shadow: 14px 14px 34px 11px rgba (0,0,0,0.74);
     -webkit-box-shadow: 14px 14px 34px 11px rgba(0,0,0,0.74);
     -moz-box-shadow: 14px 14px 34px 11px rgba(0,0,0,0.74);
     padding: 40px 40px 40px 40px;
+    background-image: linear-gradient(to left, #ffffff, #fafafd, #f2f6fb, #eaf2f8, #e1eff4, #d4e3e6, #c7d7d9, #bacbcb, #a6b4b4, #929d9d, #7f8787, #6c7272);
 }
 
 .logo{
+    display: flex;
     flex: 1;
     text-align: left;
     width: 300px;
     height: 200px;
+}
+
+.logo:hover{
+    background-color: black;
+    border: none;
 }
 
 .menu{
@@ -126,7 +127,7 @@ form input::placeholder{
 
 .ppalprod{
     text-align: center;
-    background-color:grey;
+    background-color:black;
     background-repeat: repeat;
     margin: 80px 0px 80px 0px ;
     justify-content: center;
@@ -134,13 +135,11 @@ form input::placeholder{
 
 
 .wsp{
+    display: flex;
     border-radius: 50%;
     width: 70px;
     height: 70px;
-}
-
-.formprod{
-    text-align: center;
+    margin-left: 10px;
 }
 
 .form-input{
@@ -152,40 +151,37 @@ form input::placeholder{
     text-align: center;
 }
 
-.form-textarea{
-    width: 20%;
-    margin-top: 3px;
-    border: none;
-    border-bottom: 4px solid black;
-    background-color: transparent;
-    text-align: center;
-}
-
-.form-submit{  
-    background-color: green;
-    font-size: 15px;
-}
-
-.form-reset{  
-    background-color: red;
-    font-size: 15px;
-}
-
-.frame{
+.satisfaccion{
+    display: flex;
     justify-content: center;
+    margin-top: 4%;
+    font-size: 600;
+}
+
+.form-ta-sumate{
+    margin-top: 5%;
 }
 
 .encabezado{
     display: inline;
 }
 
-.index{
+.index{ 
     display: flex;
     text-align: center;
     background-image: url(../assets/FONDO\ MAIN.jpg);
     background-repeat: no-repeat;
     color: #eaf2f8;
     justify-content: space-between;
+    width: 100%;
+}
+
+
+.contacto-main{ 
+    text-align: center;
+    background-image: url(../assets/FONDO\ MAIN.jpg);
+    background-repeat: no-repeat;
+    color: #eaf2f8;
 }
 
 .iframe{
@@ -197,7 +193,7 @@ form input::placeholder{
 
 .fondot1{
     background-image: url(../assets/Fondo\ titulo1.png);
-    background-repeat:repeat;
+    background-size: auto;
     color: #ffffff;
 }
 
@@ -206,4 +202,242 @@ form input::placeholder{
     flex-direction: column;
     text-align: center;
     color: #eaf2f8;
+}
+
+.formbb{
+    display: flex;
+    text-align: center;
+}
+
+.font{
+    font-family:'Poppins', sans-serif;
+}
+
+.grid-container{
+    margin: 5px;
+    display: grid;
+    grid-gap: 15px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 250px);
+    grid-template-areas:
+        "img-1 img-1 img-2 img-3"
+        "img-1 img-1 img-2 img-3"
+        "img-4 img-5 img-6 img-6"
+        "img-7 img-8 img-8 img-9";
+    background-color: black;
+}
+
+.grid-img1{
+    grid-area: img-1;
+}
+
+.grid-img2{
+    grid-area: img-2;
+}
+
+.grid-img3{
+    grid-area: img-3;
+}
+
+.grid-img4{
+    grid-area: img-4;
+}
+
+.grid-img5{
+    grid-area: img-5;
+}
+
+.grid-img6{
+    grid-area: img-6;
+}
+
+.grid-img7{
+    grid-area: img-7;
+}
+
+.grid-img8{
+    grid-area: img-8;
+}
+
+.grid-img9{
+    grid-area: img-9;
+}
+
+.grid-container div img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.centrado{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.avisos{
+    display: grid;
+    height: 100vh;
+    grid-template-rows: 206 px auto 155px;
+}
+
+.stock{
+    display: flex;
+    height: 25px;
+    width: 40px;
+    justify-content: center;
+    text-align: center;
+}
+
+.submit-index{
+    margin: 10px 1px 10px 1px;
+    background-color:#6c7272;
+    color: turquoise;
+    border-radius: 50px;
+}
+
+.submit-index:hover{
+    border: 1px solid;
+}
+
+.form-sumate{
+    width: 550px;
+}
+
+.div-productos{
+    display: grid;
+    grid-template-rows: repeat(4, 400px);
+    grid-template-columns: repeat(1, 250px) ;
+    grid-template-areas: 
+    "prod1"
+    "prod2"
+    "prod3"
+    "prod4";
+    padding-left: 40%;
+    padding-bottom: 8%;
+    
+}
+
+.prod-1{
+    grid-area: prod1;
+}
+
+.prod-2{
+    grid-area: prod2;
+}
+
+.prod-3{
+    grid-area: prod3;
+}
+
+.prod-4{
+    grid-area: prod4;
+}
+
+
+
+.a{
+    text-decoration: none;
+    color: turquoise;
+    cursor: pointer;
+}
+
+.ab{
+    text-decoration: none;
+    color: red;
+    cursor: pointer;
+}
+
+a:hover{ 
+    font-weight: 700;
+    padding: 1px;
+    background-color: #ffffff;
+    color: black;
+ }
+
+.datos{
+    margin: 5% auto 5% auto;
+    font-size: 20px;
+}
+
+.img-carr{
+    height: 35%;
+    width: 50%;
+}
+
+.text-carr{
+    color: black;
+}
+
+.contact-h3{
+    margin: 20px auto auto auto;
+    padding-bottom: 1px;
+}
+
+
+.nos-acompanan{
+    display: flex;
+    width: auto;
+    height: 200px;
+}
+
+.nos-acompanan-img{
+    width: 0px;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: 0.8;
+    transition: 0.5 ease;
+}
+
+section img:hover{
+    cursor: crosshair;
+    width: 300px;
+    opacity: 1;
+    filter: contrast(120%);
+}
+
+@keyframes show{
+    from{
+        opacity: 0;
+        scale: 25%;
+    }
+
+    to{
+        opacity: 1;
+        scale: 100%;
+    }
+}
+
+section{
+    view-timeline-name: --section;
+    view-timeline-axis: block;
+
+    animation-timeline: --section;
+    animation-name: show;
+
+    animation-range: entry 15% cover 45%;
+    animation-fill-mode: both;
+}
+
+
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show, .nav-link{
+    background-color: black;
+    color: turquoise;
+}
+
+
+.navbar-2{
+    display: flex;
+    justify-content: end;
+}
+
+.header-1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+}
+
+.grid-container-index{
+    display: grid;
 }
