--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,18 +2,20 @@ footer{
     background-color: #7f8787;
     text-align: center;
     grid-area: footer;
+
+    .a{
+        text-decoration: none;
+        color: turquoise;
+        cursor: pointer;
+        margin: 10px;
+    }
+    
+    .rs{
+        display: flex;
+        justify-content: center;
+        list-style-type: none;
+        align-items: center;
+        padding: 5px;
+    }
 }
 
-.a{
-    text-decoration: none;
-    color: turquoise;
-    cursor: pointer;
-}
-
-.rs{
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-    align-items: center;
-    padding: 5px;
-}
