--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -1,3 +1,4 @@
+@import "mixin";
 .grid-container{
     margin: 5px;
     display: grid;
@@ -54,10 +55,57 @@
     object-fit: cover;
 }
 
-@media (min-width: 480px) and (max-width: 1200px){
-    .navbar-toggler{
+
+.navbar-toggler{
+    @include medias-querys('tablet') {
         background-color: white;
     }
+
+    @include medias-querys('mobile') {
+       background-color: white;
+}
+}
+
+.grid-container{
+    @include medias-querys('tablet') {
+        grid-template-columns: auto;
+        grid-template-areas: 
+        "img-1 img-1 img-1"
+        "img-2 img-2 img-2"
+        "img-3 img-3 img-3"
+        "img-5 img-4 img-4"
+        "img-6 img-4 img-4"
+        "img-7 img-7 img-7"
+        "img-8 img-8 img-8"
+        "img-9 img-9 img-9"
+        ;
+        object-fit: cover;
+        grid-gap: 5px;}
+        
+    }
+
+    @include medias-querys('mobile') {
+        .grid-container{
+            grid-template-columns: auto;
+            grid-template-areas: 
+            "img-1 img-1 img-1"
+            "img-2 img-2 img-2"
+            "img-3 img-3 img-3"
+            "img-5 img-4 img-4"
+            "img-6 img-4 img-4"
+            "img-7 img-7 img-7"
+            "img-8 img-8 img-8"
+            "img-9 img-9 img-9"
+            ;
+            object-fit: cover;
+            grid-gap: 5px;
+        }
+}
+
+
+
+@media (min-width: 480px) and (max-width: 1200px){
+   
 
     .grid-container{
         grid-template-columns: auto;
@@ -85,9 +133,7 @@
         text-align: left;
     }
 
-    .navbar-toggler{
-        background-color: white;
-    }
+  
 
     .grid-container{
         grid-template-columns: 0.5fr 0.5fr;
